# message-board

./: .env.valyent  .gitignore  IMAGES.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.zh-CN.md  README.zh-TW.md  REFERENCES.md  pyproject.toml  sample.env.valyent
.github/workflows/: build.yml  ci.yml  ci_frontend.yml  ci_server.yml  deploy_valyent.yml
300/: README.md
300/100/: README.md
containers/app/: .env.valyent  compose.yaml  sample.docker-compose.dev.yml  sample.docker-compose.prod.yml  sample.env
containers/app/DRAFT-frontend/: package-lock.json  package.json  rollup.config.js  svelte.config.js
containers/app/DRAFT-frontend/public/: index.html
containers/app/DRAFT-frontend/src/: App.svelte  PostMessage.svelte  SplitFlap.svelte  app.html  main.js
containers/app/DRAFT-frontend/src/routes/post/: +page.svelte
containers/app/DRAFT-frontend/static/: shared.css
containers/app/ORIGINAL-frontend/: .gitignore  package-lock.json  package.json  rollup.config.js
containers/app/ORIGINAL-frontend/public/: index.html
containers/app/ORIGINAL-frontend/src/: App.svelte  PostMessage.svelte  SplitFlap.svelte
containers/app/PARKED-server/: Dockerfile.dev  README.md  pyproject.toml  requirements.txt  sample.env
containers/app/PARKED-server/src/message_board/: __about__.py
containers/app/PARKED-server/tests/: test_app.py
containers/app/database/: Dockerfile.dev  Dockerfile.prod  README.md  sample.init.sql.dev  sample.postgresql.conf.dev
containers/app/db-gui/: .gitignore  Dockerfile.dev  Dockerfile.prod  dbvis-connections.xml  dbvis_linux_14_0_4.deb.txt  sample.dbvis.prefs.dev  sample.dbvis.prefs.prod
containers/app/frontend/: Dockerfile.dev  Dockerfile.prod  PARKED-Dockerfile.dev  package.json  pnpm-lock.yaml
containers/app/server/: Dockerfile.dev  Dockerfile.prod  README.md  ftl.yaml  hatch.toml  pyproject.toml  requirements.txt  sample.env
containers/app/server/.ftl/: config.yaml  deploy.sh
containers/app/server/src/message_board/: __about__.py  __init__.py  app.py  config.py
containers/app/server/src/message_board/config/: __init__.py  baseConfig.py  developmentConfig.py  productionConfig.py
containers/app/server/src/message_board/utils/: __init__.py  app_utils.py
containers/app/server/tests/: test_app.py
