[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message-board-server"
version = "0.1.0"
description = "A Flask web server application managed with Hatch for a message board."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Willem van Heemstra", email = "wvanheemstra@icloud.com" }
]
dependencies = [
    "flask>=2.3.0",
    "gunicorn>=20.1.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "mypy>=1.3.0"
]

[tool.hatch.envs.default]
dependencies = [
    "flask>=2.3.0",
    "gunicorn>=20.1.0"
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.3.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "mypy>=1.3.0"
]

[tool.hatch.envs.flask]
scripts = {
    "run" = "flask run --host=0.0.0.0 --port=5000",
    "shell" = "flask shell"
}

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.3.0"
]
scripts = {
    "run" = "pytest tests/"
}

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
