[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message-board"
version = "0.0.1"
description = "Message Board Application"
dependencies = [
    "flask>=2.0.0",
    "apiflask>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    # other dev dependencies...
]

[project.urls]
Documentation = "https://github.com/vanHeemstraSystems/message-board#readme"
Issues = "https://github.com/vanHeemstraSystems/message-board/issues"
Source = "https://github.com/vanHeemstraSystems/message-board"

[tool.hatch.version]
path = "src/message_board/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/message_board tests}"

[tool.coverage.run]
source_pkgs = ["message_board", "tests"]
branch = true
parallel = true
omit = [
  "src/message_board/__about__.py",
]

[tool.coverage.paths]
message_board = ["src/message_board", "*/server/src/message_board"]
tests = ["tests", "*/message-board/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
