[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message_board"
version = "0.0.1"
description = "Message Board Server"
dependencies = [
    "flask>=2.0.0",
    "apiflask>=2.0.0",
    "python-dotenv>=1.0.0"
]

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/message_board"]

[tool.hatch.build.targets.sdist]
only-include = ["src"]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
